--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -2,31 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-.react-flow__node-custom {
+/* .react-flow__node-custom {
   font-size: 10px;
   width: 180px;
   background: #f5f5f6;
@@ -86,4 +62,4 @@ body {
   width: 100%;
   margin-top: 5px;
   font-size: 10px;
-}
+} */
